<resources>
    <string name="app_name">AppService</string>
    <string name="textDefalutValue">这是默认值</string>
    <string name="btnStartSevrice">启动服务</string>
    <string name="btnStopSevrice">关闭服务</string>
    <string name="btnBindSevrice">绑定服务</string>
    <string name="btnUnbindSevrice">取绑服务</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>