<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.5"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline2"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.3"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline4"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.39"/>
    <TextView
            android:text="@string/textDefalutValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViedShow"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="68dp"
            android:textSize="34sp"/>
    <Button
            android:text="@string/btnStartSevrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnStartSevrice"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintBottom_toTopOf="@+id/guideline2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"/>
    <Button
            android:text="@string/btnStopSevrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnStopSevrice"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintBottom_toTopOf="@+id/guideline2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"/>
    <Button
            android:text="@string/btnBindSevrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnBindevrice"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintBottom_toTopOf="@+id/guideline4" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"/>
    <Button
            android:text="@string/btnUnbindSevrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnUnbindSevrice"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintBottom_toTopOf="@+id/guideline4" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline5"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.49939248"/>
    <Button
            android:text="addPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnAddPerson"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintBottom_toTopOf="@+id/guideline5" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"/>
    <Button
            android:text="getPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnGetPerson"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintBottom_toTopOf="@+id/guideline5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline3"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.61"/>
    <Button
            android:text="获取本地服务binder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnLocalServier"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintBottom_toTopOf="@+id/guideline3" app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="Messenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnMessage"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            android:layout_marginTop="4dp" app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline6"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.73"/>
    <Button
            android:text="发送广播"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnSendBroadcast"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            app:layout_constraintBottom_toTopOf="@+id/guideline6" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"/>
</androidx.constraintlayout.widget.ConstraintLayout>